# mitsuba2

./: CMakeLists.txt
include/mitsuba/python/: docstr.h
include/mitsuba/render/: fwd.h  interaction.h  kdtree.h  mesh.h  scene.h  shape.h  shapegroup.h
include/mitsuba/render/optix/: common.h  ray.cuh  shapes.h  vector.cuh
myscripts/gen_train/: data_handler.py
resources/ptx/: optix_rt.ptx
src/libcore/python/: distr_2d_v.cpp  main_v.cpp  qmc_v.cpp
src/librender/: CMakeLists.txt  mesh.cpp  scene.cpp  scene_embree.inl  scene_native.inl  scene_optix.inl  shape.cpp
src/librender/optix/: CMakeLists.txt  optix_rt.cu
src/librender/python/: bsdf.cpp  emitter.cpp  interaction.cpp  interaction_v.cpp  microfacet.cpp  phase.cpp  sampler_v.cpp  scene_v.cpp  sensor_v.cpp  shape_v.cpp  texture_v.cpp
src/librender/tests/: test_mesh.py  test_scene.py
src/shapes/: blender.cpp  cylinder.cpp  disk.cpp  instance.cpp  obj.cpp  ply.cpp  rectangle.cpp  shapegroup.cpp  shapegroup.h  sphere.cpp
src/shapes/optix/: cylinder.cuh  disk.cuh  mesh.cuh  rectangle.cuh  sphere.cuh
src/shapes/tests/: test_cylinder.py  test_disk.py  test_instance.py
